<resources>
    <string name="app_name">PermissionTutorialApp</string>
    <string name="login_button">Log-in</string>
    <string name="dialog_message">We need your contacts! Show permission window?</string>
    <string name="dialog_title">GIVE US YOUR CONTACTS!!</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="userName">Name</string>
    <string name="userSurname">Surname</string>
    <string name="userNameHint">Name</string>
    <string name="userSurnameHint">Surname</string>
    <string name="streetName">Street</string>
    <string name="streetNameHint">Street</string>
    <string name="streetNumber">Street Number</string>
    <string name="streetNumberHint">Street number</string>
    <string name="cityName">City</string>
    <string name="cityNameHint">City</string>
    <string name="postCode">Post code</string>
    <string name="postCodeHint">Post Code</string>
    <string name="countryName">Country</string>
    <string name="countryNameHint">Country</string>
    <string name="email">Email</string>
    <string name="emailHint">E-mail</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="phoneNumberHint">Phone number</string>
    <string name="passwordText">Password</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordText">Password</string>
    <string name="confirmPasswordHint">Re-enter password</string>
    <string name="registerToNewsletterCheckbox">Sign-up to newsletter</string>
    <string name="registerButtonText">Register</string>
    <string name="personal_information">Personal information</string>
    <string name="address_information">Address information</string>
    <string name="contact_information">Contact information</string>
    <string name="password_setting">Set a password</string>
    <string name="registerFormName">Sign-up</string>
    <string name="welcome_text">Welcome!</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incid...</string>
    <string name="about_the_app_title">About the app</string>
    <string name="settings">Settings</string>
</resources>
