<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/fontSizeRegisterFormStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:divider="@drawable/empty_divider"
    android:orientation="vertical"
    android:showDividers="middle">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        tools:context="com.mgabrynowicz.permissiontutorialapp.RegisterForm">


        <LinearLayout
            style="@style/fontSizeRegisterFormStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:divider="@drawable/empty_divider"
            android:orientation="vertical"
            android:showDividers="middle"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_name_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/empty_divider"
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:showDividers="middle">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_information"
                        android:textSize="@dimen/card_headline_font_size" />


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="20">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/userNameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/userNameHint"
                            android:textSize="14sp" />

                    </android.support.design.widget.TextInputLayout>


                    <LinearLayout
                        android:id="@+id/userSurnameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:counterEnabled="true"
                            app:counterMaxLength="20">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/userSurnameEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/userSurnameHint"
                                android:textSize="14sp" />

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_address_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/empty_divider"
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:showDividers="middle">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address_information"
                        android:textSize="@dimen/card_headline_font_size" />


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="20">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/cityNameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cityNameHint"
                            android:textSize="14sp" />


                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="20">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/streetNameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/streetNameHint"
                            android:textSize="14sp" />


                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="20">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/streetNumberEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/streetNumberHint"
                            android:textSize="14sp" />


                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="20">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/postCodeEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/postCodeHint"
                            android:textSize="14sp" />


                    </android.support.design.widget.TextInputLayout>


                    <Spinner
                        android:id="@+id/countries_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                    </Spinner>

                    <!--<EditText-->
                    <!--android:id="@+id/countryEditText"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:background="@drawable/edittext_form_style"-->
                    <!--android:gravity="center"-->
                    <!--android:hint="@string/countryNameHint" />-->


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_contact_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/empty_divider"
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:showDividers="middle">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_information"
                        android:textSize="@dimen/card_headline_font_size" />


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="20">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/emailEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/emailHint"
                            android:textSize="14sp" />


                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="20">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/phoneNumberEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phoneNumberHint"
                            android:textSize="14sp" />


                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_password_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/empty_divider"
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:showDividers="middle">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password_setting"
                        android:textSize="@dimen/card_headline_font_size" />


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="20"
                        app:passwordToggleDrawable="@drawable/asl_password_visibility"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/passwordHint"
                            android:textSize="14sp"
                            android:inputType="textPassword"/>


                    </android.support.design.widget.TextInputLayout>




                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="20"
                        app:passwordToggleDrawable="@drawable/asl_password_visibility">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/confirmPasswordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirmPasswordHint"
                            android:textSize="14sp"
                            android:inputType="textPassword"/>


                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_newsletter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/registerToNewsletterCheckbox" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/registerButtonText" />

            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>